--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | Results summary component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -27,18 +32,47 @@
   </head>
   <body>
     <div class="container">
-      <h3>Your Result</h3>
-    </div>
+      <div class="d-flex flex-column flex-md-row">
+        <div class="p-3 flex-fill col-sm-12" style="background-color: blue">
+          <h3>Your Result</h3>
+          <div class="circle">
+            <h1>76</h1>
+            <p>out of 100</p>
+          </div>
 
-    76 of 100 Great You scored higher than 65% of the people who have taken
-    these tests. Summary Reaction 80 / 100 Memory 92 / 100 Verbal 61 / 100
-    Visual 72 / 100 Continue
+          <h2>Great</h2>
+          <p id="centerPra">
+            You scored higher than 65% of <br />
+            the people who have taken <br />
+            these tests.
+          </p>
+        </div>
+        <div
+          class="p-3-3 flex-fill"
+          style="background-color: rgb(241, 241, 247)"
+        >
+          <div class="side-Cont">
+            <h5>Summary</h5>
+            <p class="parR1">Reaction 80 / 100</p>
+            <p class="parR2">Memory 92 / 100</p>
+            <p class="parR3">Verbal 61 / 100</p>
+            <p class="parR4">Visual 72 / 100</p>
+            <button class="btn">Continue</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Ayush Mishra</a>.
+      >. Coded by
+      <a href="https://github.com/Ayush-97techyboy">Ayush Mishra</a>.
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
